# mozfun-local

./: .gitignore  Cargo.toml  Dockerfile  README.md  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: build-mozfun-local.yml
examples/: import_and_use.ipynb
pytests/: test_bytes_fun.py  test_glean_fun.py  test_json_fun.py  test_norm_fun.py
python/: glean_fun.py  json_fun.py  map_fun.py  norm_fun.py  stats_fun.py
python/mozfun_local/: bytes_fun.py  glam.py  glean_fun.py  json_fun.py  map_fun.py  norm_fun.py  stats_fun.py
python/utils/: generate_histograms.py
src/: bytes.rs  glam.rs  glean.rs  hist.rs  json.rs  lib.rs  map.rs  norm.rs  search_terms.rs  stats.rs
