[package]
name = "mozfun-local"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html[lib]
[lib]
name = "mozfun_local"
crate-type = ["cdylib"]

[package.metadata.maturin]
python-source = "python"
name = "mozfun_local.mozfun_local_rust"

[dependencies]
rayon = "1.5.3"
dashmap = "5.4.0"
serde_json = "1.0.85"
regex = "1.6.0"
mimalloc = "0.1.29"
serde = {version = "1.0.145", features = ["derive"]}
libmath = "0.2.1"
pyo3 = "0.17.1"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[target.x86_64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]

[target.aarch64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]
