[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "mozfun-local"
version = "0.0.1"
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.8"',
    'bitstring',
    'numpy'
]

[tool.maturin]
python-source = "python"
bindings = "pyo3"
profile = "release"
all-features = true
